--- a/Go/golang_notes/学习前准备.md
+++ b/Go/golang_notes/学习前准备.md
@@ -18,22 +18,9 @@ go 跟 C 支持的注释方式一样。
 
 
 
-## 附录
-
-### 参考资料
-
-* [go by exampe](https://gobyexample.com)
-* 
+```bash
+export GOPROXY=https://goproxy.cn
+```
 
 
-
-### 示例
-
-| 示例      | 标注   |
-| --------- | ------ |
-| errors.go | 没理解 |
-|           |        |
-|           |        |
-|           |        |
-|           |        |
 
