--- a/Go/golang_notes/学习前准备.md
+++ b/Go/golang_notes/学习前准备.md
@@ -14,7 +14,15 @@ go 跟 C 支持的注释方式一样。
 
 
 
+```bash
+# 初始化模块文件
+go mod init
 
+# 下载模块
+go mod tidy
+
+
+```
 
 
 
@@ -24,3 +32,8 @@ export GOPROXY=https://goproxy.cn
 
 
 
+
+
+## 疑问
+
+* Go 的几个目录以及目录下的文件是干什么用的？
